--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,10 @@
 #Kotlin
 kotlin.code.style=official
 kotlin.daemon.jvmargs=-Xmx2048M
+kotlin.apple.xcodeCompatibility.nowarn=true
 
 #Gradle
-org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
 
 #Android
 android.nonTransitiveRClass=true
